# Mistral-Hackathon-NYC

./: .claude.json  .copilot-instructions.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  credentials.py  pyproject.toml
.claude/: PROGRESS.md  README.md  commit.md  deep-research.md  doc-sweep.md  refactor-with-tests.md  run-tests.md  safe-reader.md
.devcontainer/: .dependency-fingerprint  devcontainer.gpu.json  devcontainer.json  install-ml-extras.sh  setup.sh
.github/: .demoplan  copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: copilot-mistral.agent.md
.github/codespaces/: prebuilds.yml
.github/workflows/: ci.yml  codespaces-prebuild-validation.yml
.openclaw/: README.md
.openclaw/agentop-studio/: README.md  config.yaml  findings.md  progress.md  task_plan.md
.openclaw/databolt-edge/: README.md  config.yaml  findings.md  progress.md  task_plan.md
AgentOp-Studio/: .demoplan  .plan  PROGRESS.md  README.md  test_app.py
AgentOp-Studio/agents/: __init__.py  main_agent.py  tools.py
AgentOp-Studio/backend/: costs.py  databricks_agents.py  db.py  instrumented_agent.py  main.py  replay.py  retry.py  wandb_analysis.py  workflow_renderer.py
AgentOp-Studio/frontend/: app.py
AgentOp-Studio/infra/: Dockerfile  docker-compose.yml
AgentOp-Studio/scripts/: mistral_training_demo.py
AgentOp-Studio/tests/: conftest.py  test_costs.py  test_db.py  test_eval.py  test_replay.py  test_retry.py  test_wandb_analysis.py
DataBolt-Edge/: .demoplan  .plan  Makefile  README.md  testing.py  vanilla_test.py
DataBolt-Edge/api/: __init__.py  context_store.py  prompt_builder.py  server.py  telemetry.py
DataBolt-Edge/conversion/: __init__.py  benchmark.py  calibrate.py  pipeline.py  quantize_onnx.py  report.py
DataBolt-Edge/data/: databolt.duckdb
DataBolt-Edge/databricks/: databricks.yml
DataBolt-Edge/demo_data/: sql_bad_plan.txt
DataBolt-Edge/huggingface_integration/: __init__.py  auth.py  client.py  config.py  errors.py  testing.py
DataBolt-Edge/inference/: __init__.py  base.py  factory.py  local_trt_backend.py  nvidia_api_backend.py
DataBolt-Edge/nvidia_api_management/: README.md  __init__.py  auth.py  client.py  config.py  errors.py  logging_utils.py  testing.py
DataBolt-Edge/parsers/: __init__.py  airflow.py  spark.py  sql_plan.py
DataBolt-Edge/scripts/: build_trt_engine.py  download_model.py  export_to_onnx.py  live_hf_probe.py  live_nvidia_probe.py  run_nvidia_api_management_tests.sh  run_quantization_pipeline.py
DataBolt-Edge/tests/: test_conversion.py  test_hf_auth.py  test_hf_client.py  test_nvidia_auth.py  test_nvidia_client.py  test_nvidia_retry.py  test_parsers.py
DataBolt-Edge/ui/: __init__.py  app.py
UI/: __init__.py  streamlit_test_ui.py
agents/: __init__.py  config.yaml  main_agent.py  tools.py
docs/: CREDENTIALS.md  codespaces.md
mcp_servers/databricks_bundles/: __init__.py  bundle_client.py  mcp_client.py  server.py
prompts/system/: README.md
prompts/user/: README.md
scripts/: install_claude.sh  install_openclaw.sh  setup_skills.sh
skills/: README.md  skills-plan.md
wandb/: latest-run
wandb/run-20260301_161538-v1uiv2kh/: run-v1uiv2kh.wandb
wandb/run-20260301_162140-6482a510-7f31-41cb-ab41-7fe3736bccf7/: run-6482a510-7f31-41cb-ab41-7fe3736bccf7.wandb
wandb/run-20260301_162201-8c2a417d-6ec1-4a66-b693-a08c4c7960f8/: run-8c2a417d-6ec1-4a66-b693-a08c4c7960f8.wandb
(+16 files in other folders)
