[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistral-hackathon-nyc"
version = "0.1.0"
description = "Mistral Hackathon NYC – GPU-accelerated agentic AI prototyping environment"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.0.0",
    "wandb>=0.17.0",
    "elevenlabs>=1.0.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "torch>=2.3.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "trl>=0.8.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
    "langchain-mistralai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
