[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistral-hackathon-nyc"
version = "0.1.0"
description = "Mistral Hackathon NYC – GPU-accelerated agentic AI prototyping environment"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.0.0",
    "wandb>=0.17.0",
    "elevenlabs>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=1.5.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "onnxconverter-common>=1.16.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
    "langchain-mistralai>=0.1.0",
]
ml-gpu = [
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "torch>=2.3.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "trl>=0.8.6",
]
databricks = [
    "mcp>=1.0.0",
    "databricks-sdk>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mcp>=1.0.0",
]
agentops = [
    "duckdb>=0.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
]
conversion = [
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxconverter-common>=1.14.0",
]
ui = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "mcp_servers"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["AgentOp-Studio/tests", "DataBolt-Edge/databricks/tests"]
